# coder

./: .env.example  .gitignore  Dockerfile  compose.yaml  pyproject.toml
alembic/: env.py
scripts/prisma/: schema.prisma
scripts/prisma/migrations/20250606202027_added_model_for_subs/: migration.sql
scripts/prisma/migrations/20250615180038_change/: migration.sql
src/coder/: app.py  chainlit.md  chainlit_ru-RU.md  chainlit_ru.md  main.py  prompts.py  tochka_client.py
src/coder/.chainlit/: config.toml
src/coder/.chainlit/translations/: ru-RU.json  ru.json
src/coder/database/: database.py
src/coder/datalayer/: SQLdatalayer.py
src/coder/models/: models.py
src/coder/public/elements/: MyMonaco.jsx
