[project]
name = "coder"
version = "0.1.0"
description = ""
authors = [
    {name = "artem",email = "artem@deffun.io"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "chainlit (>=2.4.301,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.13,<0.4.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "gitingest (>=0.1.4,<0.2.0)"
]

[tool.poetry]
packages = [{include = "coder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
