[tool.poetry]
name = "coder"
version = "0.1.0"
description = ""
authors = ["artem <artem@deffun.io>"]
readme = "README.md"
packages = [{ include = "coder", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
chainlit = ">=2.4.301,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
langchain = ">=0.3.23,<0.4.0"
langchain-openai = ">=0.3.13,<0.4.0"
aiohttp = ">=3.11.18,<4.0.0"
gitingest = ">=0.1.4,<0.2.0"
sqlalchemy = "^2.0.41"
uvicorn = "^0.34.3"
pydantic-settings = "^2.9.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"